Add tests for replicas and total primary counting